refactored all icon fonts to inline svg

--- a/src/tpl/about.html
+++ b/src/tpl/about.html
@@ -1,6 +1,8 @@
 <div class="lightbox-body" ng-controller="AboutCtrl">
   <header>
-    <button class="close" wo-touch="state.about.toggle(false)" data-action="lightbox-close">&#xe007;</button>
+    <button class="close" wo-touch="state.about.toggle(false)" data-action="lightbox-close">
+      <svg><use xlink:href="#icon-close" /><title>Close</title></svg>
+    </button>
   </header>
 
   <div class="content">
