--- a/src/tpl/account.html
+++ b/src/tpl/account.html
@@ -1,7 +1,9 @@
 <div class="lightbox-body" ng-controller="AccountCtrl">
   <header>
     <h2>Account</h2>
-    <button class="close" wo-touch="state.account.toggle(false)" data-action="lightbox-close">&#xe007;</button>
+    <button class="close" wo-touch="state.account.toggle(false)" data-action="lightbox-close">
+      <svg><use xlink:href="#icon-close" /><title>Close</title></svg>
+    </button>
   </header>
 
   <div class="content">
