--- a/src/tpl/privatekey-upload.html
+++ b/src/tpl/privatekey-upload.html
@@ -1,7 +1,9 @@
 <div class="lightbox-body" ng-controller="PrivateKeyUploadCtrl">
   <header>
     <h2>Setup Key Sync</h2>
-    <button class="close" wo-touch="state.privateKeyUpload.toggle(false)" data-action="lightbox-close">&#xe007;</button>
+    <button class="close" wo-touch="state.privateKeyUpload.toggle(false)" data-action="lightbox-close">
+      <svg><use xlink:href="#icon-close" /><title>Close</title></svg>
+    </button>
   </header>
 
   <div class="content">
