fix icon in mail list

--- a/src/tpl/mail-list.html
+++ b/src/tpl/mail-list.html
@@ -6,7 +6,9 @@
   </header>
 
   <div class="compose" wo-touch="state.writer.write(); $event.stopPropagation()">
-    <button class="btn-icon" title="New mail"></button>
+    <button class="btn-icon" title="New mail">
+      <svg><use xlink:href="#icon-write" /><title>New mail</title></svg>
+    </button>
   </div>
 
   <div class="search">
