refactored buttons, added light button

--- a/src/tpl/add-account.html
+++ b/src/tpl/add-account.html
@@ -13,7 +13,7 @@
       <hr>
       <div class="choice">
         <p><b>Login to IMAP account.</b> Connect Whiteout Mail to any existing email account via IMAP.</p>
-        <button class="btn btn-alt" wo-touch="goTo(4)">Login to existing</button>
+        <button class="btn btn--secondary" wo-touch="goTo(4)">Login to existing</button>
       </div>
     </div>
   </div>
