--- a/src/tpl/login-initial.html
+++ b/src/tpl/login-initial.html
@@ -21,7 +21,7 @@
 
         <div>
           <button type="submit" wo-touch="generateKey()" class="btn"tabindex="3">Generate new key</button>
-          <button wo-touch="importKey()" class="btn btn-alt">Import existing key</button>
+          <button wo-touch="importKey()" class="btn btn--secondary">Import existing key</button>
         </div>
       </form>
     </div>
