--- a/src/tpl/account.html
+++ b/src/tpl/account.html
@@ -31,7 +31,7 @@
       </table>
 
       <div class="control">
-        <button wo-touch="state.account.toggle(false); state.setPassphrase.toggle(true)" class="btn btn-alt">Set passphrase</button>
+        <button wo-touch="state.account.toggle(false); state.setPassphrase.toggle(true)" class="btn btn--secondary">Set passphrase</button>
         <button wo-touch="exportKeyFile()" class="btn">Export keypair</button>
       </div>
 
