--- a/src/tpl/contacts.html
+++ b/src/tpl/contacts.html
@@ -15,7 +15,7 @@
         </div>
         <div class="key-controls-import">
           <input id="keyfile-input" type="file" multiple accept=".asc" keyfile-input>
-          <button class="btn" ng-class="{'btn-primary': sendBtnSecure === false}" keyfile-btn>Import keys</button>
+          <button class="btn" ng-class="{'btn--invalid': sendBtnSecure === false}" keyfile-btn>Import keys</button>
         </div>
       </div>
 
