--- a/src/tpl/login-privatekey-download.html
+++ b/src/tpl/login-privatekey-download.html
@@ -17,7 +17,7 @@
 
       <div>
         <button class="btn" wo-touch="goForward()">Confirm token</button>
-        <a class="btn btn-alt" href="#login-new-device">Import key file</a>
+        <a class="btn btn--secondary" href="#login-new-device">Import key file</a>
       </div>
     </div>
 
