--- a/src/tpl/privatekey-upload.html
+++ b/src/tpl/privatekey-upload.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="control">
-        <button ng-show="step > 1 && step < 4" class="btn btn-alt" wo-touch="goBack()">Go back</button>
+        <button ng-show="step > 1 && step < 4" class="btn btn--secondary" wo-touch="goBack()">Go back</button>
         <button ng-show="step < 4" class="btn" wo-touch="goForward()">Continue</button>
       </div>
 
