--- a/src/tpl/nav.html
+++ b/src/tpl/nav.html
@@ -8,6 +8,9 @@
       <a href="javascript:;">
         <svg role="presentation"><use xlink:href="#icon-inbox" /></svg> Inbox (2)
       </a>
+      <button class="btn-icon-light">
+        <svg><use xlink:href="#icon-dropdown" /><title>More</title></svg>
+      </button>
     </li>
     <li class="nav__folder">
       <a href="javascript:;">
