--- a/src/tpl/desktop.html
+++ b/src/tpl/desktop.html
@@ -1,9 +1,7 @@
 <div class="app" ng-class="{'app--show-aside': state.nav.open}">
   <aside class="app__aside" ng-include="'tpl/nav.html'"></aside>
   <div class="app__container" ng-click="state.nav.toggle(false)">
-    <header class="app__header">
-
-    </header>
+    <header class="app__header" ng-include="'tpl/action-bar.html'"></header>
     <main class="app__main">
       <section class="content main-content" ng-class="{'shift-right': state.read.open}">
         <div class="column column-left" ng-include="'tpl/mail-list.html'"></div>
