--- a/src/tpl/login-set-credentials.html
+++ b/src/tpl/login-set-credentials.html
@@ -22,7 +22,7 @@
         <br>
         <input class="input-text" type="email" required ng-model="emailAddress" placeholder="Email address" focus-me="true" tabindex="1" spellcheck="false"></input>
         <input class="input-text" type="text" ng-model="realname" placeholder="Full name (optional)" tabindex="2"></input>
-        <input ng-hide="useOAuth" ng-required="!useOAuth" class="input-text" ng-class="{'input-text-error': connectionError}" type="password" ng-model="password" placeholder="Password" tabindex="3">
+        <input ng-hide="useOAuth" ng-required="!useOAuth" class="input-text" ng-class="{'input-text--error': connectionError}" type="password" ng-model="password" placeholder="Password" tabindex="3">
       </div><!--/credentials-->
 
       <a href="#" wo-touch='showDetails = !showDetails; $event.preventDefault()'>{{showDetails ? "Hide Options" : "Show Options"}}</a>
