--- a/src/tpl/set-passphrase.html
+++ b/src/tpl/set-passphrase.html
@@ -26,7 +26,7 @@
           </tr>
           <tr>
             <td><label>Confirm passphrase</label></td>
-            <td><input class="input-text" type="password" ng-model="confirmation" ng-class="{'input-text-error': (confirmation || newPassphrase) && confirmation !== newPassphrase}" tabindex="3"></td>
+            <td><input class="input-text" type="password" ng-model="confirmation" ng-class="{'input-text--error': (confirmation || newPassphrase) && confirmation !== newPassphrase}" tabindex="3"></td>
           </tr>
         </tbody>
       </table>
