--- a/src/tpl/write.html
+++ b/src/tpl/write.html
@@ -49,7 +49,7 @@
     <div class="subject-box">
       <input class="input-text" ng-model="subject" spellcheck="true" tabindex="2" placeholder="Subject" ng-change="updatePreview()">
       <input id="attachment-input" type="file" multiple attachment-input>
-      <button class="btn btn-attachment" ng-class="{'btn-primary': sendBtnSecure === false}" attachment-btn>
+      <button class="btn btn-attachment" ng-class="{'btn--invalid': sendBtnSecure === false}" attachment-btn>
         <svg><use xlink:href="#icon-attachment" /><title>Add attachment</title></svg>
       </button>
     </div><!--/.subject-box-->
