--- a/src/tpl/nav.html
+++ b/src/tpl/nav.html
@@ -79,8 +79,14 @@
     </li>
   </ul>
 
-  <footer>
-    Lorem ipsum
+  <footer ng-class="{syncing: account.loggingIn || account.busy || searching}">
+    <span class="spinner"></span>
+    <span class="text" ng-switch="account.online">
+      <span ng-switch-when="false">
+        <svg><use xlink:href="#icon-offline" /></svg>
+      </span>
+      {{lastUpdateLbl}} {{lastUpdate | date:'shortTime'}}
+    </span>
   </footer>
 </nav>
 
