--- a/src/tpl/nav.html
+++ b/src/tpl/nav.html
@@ -8,7 +8,7 @@
       <a href="javascript:;">
         <svg role="presentation"><use xlink:href="#icon-inbox" /></svg> Inbox (2)
       </a>
-      <button class="btn-icon-light">
+      <button class="btn-icon-very-light">
         <svg><use xlink:href="#icon-dropdown" /><title>More</title></svg>
       </button>
     </li>
